# Profiler

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Doxyfile  Exceptions.h  Global.h  Mainpage.h  Makefile  Makefile.win  Makefile~  README.md  README.md~  Stopwatch.h  profiler.h
AbbyyXmlParser/: AbbyyXmlParser.cxx  AbbyyXmlParser.h  CMakeLists.txt  exec_abbyy_transform.cxx  testAbbyyXmlParser.cxx  utf8.h
AlphaScore/: AlphaScore.cxx  AlphaScore.h  AlphaScore.tcc
Alphabet/: Alphabet.cxx  Alphabet.h  CMakeLists.txt  check_sort.cxx  test.cxx
AltoXML/: AltoEnrich.cxx  AltoEnrich.h  AltoXMLReader.cxx  AltoXMLReader.h  CMakeLists.txt  DocXMLWriter.cxx  DocXMLWriter.h  exec_altoEnrich.cxx
AltoXML/Test/: CMakeLists.txt  TestAltoXML.h  exec_testAltoXML.cxx
AutoCorrector/: AutoCorrector.cxx  AutoCorrector.h
Autocorrection/: autocorrection.cxx  autocorrection.h
Candidate/: Candidate.h  Candidate.tcc  Candidate_inline_definitions.tcc
CorrectionSystem/: CMakeLists.txt  CorrectionSystem.cxx  CorrectionSystem.h  execCorrectionSystem.cxx  exec_prepareDocument.cxx  testCorrectionSystem.cxx
CreateXML/: CMakeLists.txt  CreateXML.cxx  CreateXML.h  execCreateXML.cxx
DictSearch/: AdaptiveLex.cxx  AdaptiveLex.h  AdditionalLex.cxx  AdditionalLex.h  AnnotatedDictModule.h  CMakeLists.txt  DictSearch.cxx  DictSearch.h  GlobalHistPatterns.cpp  GlobalHistPatterns.hpp  UnknownVirtualLex.cxx  UnknownVirtualLex.h  documentation.h
DocEvaluation/: CMakeLists.txt  Counter.h  DocEvaluation.h  exec_docEvaluation.cxx
DocXML/: CMakeLists.txt  DocXMLReader.cxx  DocXMLReader.h  DocXMLWriter.cxx  DocXMLWriter.h  LegacyDocXMLReader.cxx  LegacyDocXMLReader.h  MergedGroundtruthReader.cxx  MergedGroundtruthReader.h  exec_mergeGroundtruth.cxx  exec_ocrc_transform.cxx  exec_readLegacy_docXML.cxx
DocXML/Test/: CMakeLists.txt  TestDocXML.h  abbyy_doc.xml  exec_testDocXML.cxx
DocXML/Test/docdir/: test1.xml  test2.xml
Document/: .Document.tcc.swp  Document.cxx  Document.h  Document.tcc  Document_inline_definitions.tcc
Document/Test/: CMakeLists.txt  TestDocument.h  exec_testDocument.cxx  quickTest.cxx  test.align.txt  test.txt
ExtReader/: ExtReader.cxx  ExtReader.h
FBDic/: FBDic.h  FBDic.tcc  documentation.h
FBDicString/: FBDicString.h  FBDicString.tcc
Getopt/: Getopt.h  test.cxx
GlobalProfile/: CMakeLists.txt  GlobalProfile.h  GlobalProfileXMLReader.cxx  GlobalProfileXMLReader.h  PatternContainer.h  PatternContainerXMLReader.cxx  PatternContainerXMLReader.h
GlobalProfile/Test/: CMakeLists.txt  TestGlobalProfile.h  exec_testGlobalProfile.cxx
GtDoc/: AutoCorrector.cxx  AutoCorrector.h  GtDoc.cxx  GtDoc.h
Hash/: Hash.h  test.cxx
IBMGroundtruth/: IBMGTReader.h  simpleStats.pl
INIConfig/: CMakeLists.txt  INIConfig.cxx  INIConfig.h  INIParser.cxx  INIParser.h  dictionary.c  dictionary.h
LevDEA/: CMakeLists.txt  Charvec.h  LevDEA.cxx  LevDEA.h  LevDEA_cslversion.tcc  LevDEA_postables.h  LevDEA_postables.tcc  automaton_k1.txt  lev0data  lev0data.tcc  lev1data  lev1data.tcc  lev2data  lev2data.tcc  lev3data  lev3data.tcc
LevDistance/: LevDistance.h
LevFilter/: LevFilter.h
LevenshteinWeights/: LevenshteinWeights.cxx  LevenshteinWeights.h
Llocs/: CMakeLists.txt  Llocs.cpp  Llocs.hpp  LlocsReader.cxx  LlocsReader.h  WagnerFischer.cpp  WagnerFischer.hpp  profBestLines.cxx  profChooseLines.cxx  profFishy.cxx  profSyn.cxx  profileXWords.cxx  util.hpp
MSMatch/: MSMatch.h  MSMatch.tcc
MinDic/: CMakeLists.txt  MinDic.h  MinDic.tcc  StateHash.h  documentation.h
MinDicString/: MinDicString.h  MinDicString.tcc  extractMDS.cxx
Pattern/: CMakeLists.txt  ComputeInstruction.cxx  ComputeInstruction.h  Instruction.cxx  Instruction.h  Interpretation.cxx  Interpretation.h  Pattern.cxx  Pattern.h  PatternGraph.h  PatternProbabilities.h  PatternSet.h  PatternWeights.cxx  Trace.h  (+2 more)
Pattern/Test/: CMakeLists.txt  TestComputeInstruction.h  TestPattern.h  TestPatternWeights.h  exec_patterns2dot.cxx  exec_testComputeInstruction.cxx  testPattern.cxx
Profiler/: AdaptiveHistGtLex.cxx  AdaptiveHistGtLex.h  AdaptiveHistLex.cxx  AdaptiveHistLex.h  AdaptiveProfiling.cxx  CMakeLists.txt  Cache.cxx  Cache.h  CandidateConstructor.cxx  CandidateConstructor.h  CompoundDictModule.h  Dirk.h  Dirk_groundtruth.h  Evaluation.cxx  Evaluation.h  Evaluator.cxx  Evaluator.h  FrequencyList.h  FrequencyList_Trainer.h  GuessTraces.h  HTMLWriter.cxx  HTMLWriter.h  JSONOutputWriter.cxx  JSONOutputWriter.hxx  LanguageModel.cxx  LanguageModel.h  LanguageModel.hxx  ProbabilityDistribution.h  Profile.cxx  Profile.h  Profile.hxx  Profiler.cxx  Profiler.h  Profiler_Interpretation.h  Profiler_Token.h  Profiler_Token.tcc  RecPrec.cxx  RecPrec.h  SimpleOutputWriter.cxx  SimpleOutputWriter.h  (+11 more)
Profiler/Test/: CMakeLists.txt  TestFrequencyList.h  exec_testFrequencyList.cxx
tools/: CMakeLists.txt  expandResults.pl  sort_lex.pl
tools/addScoreToLex/: CMakeLists.txt  addScoreToLex.cxx
tools/compileFBDic/: CMakeLists.txt  compileFBDic.cxx
tools/compileFBDicString/: CMakeLists.txt  compileFBDicString.cxx
tools/compileMD/: CMakeLists.txt  compileMD.cxx
tools/compileMD2/: CMakeLists.txt  compileMD2.cxx
tools/compileMDString/: CMakeLists.txt  compileFBDicString.cxx  compileMDString.cxx
tools/dictSearch/: CMakeLists.txt  runDictSearch.cxx
tools/extractFBDic/: CMakeLists.txt  extractFBDic.cxx
tools/extractMD/: CMakeLists.txt  extractMD.cxx
tools/extractMD2/: CMakeLists.txt  extractMD2.cxx
tools/extractMDString/: CMakeLists.txt  extractMDString.cxx
tools/extractTT/: CMakeLists.txt  dotPath.cxx  extractTT.cxx
tools/lookupMD/: CMakeLists.txt  ReadMe.txt  lookupMD.cxx  lookupMD.vcproj  stdafx.cpp
tools/lookupMD2/: CMakeLists.txt  lookupMD2.cxx
tools/lookupMDString/: CMakeLists.txt  lookupMDString.cxx
tools/lookupTT/: CMakeLists.txt  lookupTT.cxx
tools/msFilter/: CMakeLists.txt  documentation.h  msFilter.cxx
tools/sortLex/: CMakeLists.txt  sortLex.cxx
tools/vaamFilter/: CMakeLists.txt  vaamEvaluation.cxx  vaamFilter.cxx  vamFilter.cxx
tools/valFilter/: CMakeLists.txt  valEvaluation.cxx  valFilter.cxx
(+116 files in other folders)
