add_subdirectory( compileFBDic )
add_subdirectory( compileMD )
#add_subdirectory( compileMDString )
add_subdirectory( compileFBDicString )
#add_subdirectory( compileMD2 )
add_subdirectory( dictSearch )
add_subdirectory( extractFBDic )
add_subdirectory( extractMD )
#add_subdirectory( extractMD2 )
#add_subdirectory( extractMDString )
add_subdirectory( extractTT )
add_subdirectory( lookupMD )
#add_subdirectory( lookupMD2 )
#add_subdirectory( lookupMDString )
add_subdirectory( lookupTT )
add_subdirectory( msFilter )
add_subdirectory( sortLex )
#add_subdirectory( vaamFilter )
#add_subdirectory( valFilter )
add_subdirectory( addScoreToLex )
