add_executable( testAltoXML exec_testAltoXML.cxx)
target_link_libraries( testAltoXML OCRCorrection )
target_link_libraries( testAltoXML LevDEA )
target_link_libraries( testAltoXML INIConfig )
target_link_libraries( testAltoXML DictSearch )
target_link_libraries( testAltoXML Pattern )
target_link_libraries( testAltoXML Utils )
